Change log for zeit.web
=======================

2.80 (unreleased)
-----------------

- OPS-335: Improve health check (configurable via `health_check_with_fs`)


2.79.1 (2016-05-09)
-------------------

- MAINT: Have bugsnag group UndefinedErrors by object and attribute
  name instead of the (unhelpful because constant) source code location


2.79 (2016-05-04)
-----------------

- ZON-3061: Polishing ZEIT Campus

- ZON-3062: Change wording of CP button

- ZON-3058: Show series name on column teasers

- ZON-3055: Add clicktracking for ZMO + ZCO footer

- ZON-3059: Add clicktracking for ZCO sharing button

- ZON-3030: Enable Accelerated Mobile Pages (AMP) for ZEIT Campus and ZEITmagazin

- BUG-411: Make topics available for ZEIT Campus AdController on Centerpages

- BUG-415: Only report shared URL for clicktracking

- FIX: Support non-ascii URLs in "komplettansicht" redirect

- FIX: Clearify vertical alignment of "new" element in nav

- FIX: Fix links in toolbox

- FIX: Fix wording and links

- OPS-308: Don't look at *all* gallery entries just to get the first one

- MAINT: Restrict framebuilder page_slice param to valid values

- MAINT: Add Config for Toolbox and Flyout


2.78 (2016-05-02)
-----------------

- MAINT: Update breadcrumb microdata

- FIX: Show copyright for article header image


2.77 (2016-04-29)
-----------------

- ZON-3039: Render ZCO column teasers as default in ZON

- ZON-2870: Add login cut marks for framebuilder in campus, too

- ZON-3031: Add advertorial teaser

- ZON-2974: Add ZEIT Campus launch gimmick (animated header image)

- ZON-3033: Introduce Fallback Image for ZCO Teaser

- ZON-2504: Add Highlight-Box (Quiz/Cards) to ZEIT Campus

- ZON-3048: Change sharing bar colors

- ZON-3047: Fix mobile glitches

- ZON-3052: Resize ZCO kicker logo on ZON topic teaser

- ZON-3049: Add new button to campus item in main navigation

- ZON-3051: move print/pdf function to core

- ZON-3032: Update schema.org publisher microdata
