@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - OPS-335: Improve health check (configurable via `health_check_with_fs`)
 
+- FIX: Be defensive about missing community maintenance config file
+
 
 2.79.1 (2016-05-09)
 -------------------
